# Watchhy

./: Cargo.toml  README.md  package-lock.json  response.txt
resources/: resources.gresource.xml  window.ui  window_size.gschema.xml
src/: config.rs  main.rs  models.rs  scraper.rs
src/window/: imp.rs  mod.rs
