[package]
name = "watchhy"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { version = "0.9.1", package = "libadwaita", features = ["v1_8"] }
gtk = { version = "0.11.1", package = "gtk4", features = ["gnome_49", "v4_20"] }
reqwest = { version = "0.13.2", features = ["blocking", "json", "query"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.12.3"
